tw custom entry handler view update

--- a/prjExShipperBarcodeReader/res/layout/spearnet_fragment.xml
+++ b/prjExShipperBarcodeReader/res/layout/spearnet_fragment.xml
@@ -47,7 +47,7 @@
                 android:id="@+id/txt_result"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#000" />
+                android:textColor="#00f" />
 
             <TextView
                 android:id="@+id/txt_total_amount"
